OntologyHelper tests added